--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 			<img class="image" src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="hero section image">			
 		</div>
 		<div class="hero_text">
-			<p class="welcome">Welcome to my Pinterest clone</p>
+			<h1 class="welcome">Welcome to my Pinterest clone</h1>
 			<p class="bottom_text">Discover new inspirations and save your favorite ideas</p>
 			<button class="btn">Explore Now</button>
 		</div>
